# straggler-free

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  revitalize.sh
config/mc/: mxc.cfg  mxc0.cfg
scripts/20251005-scripts/: download_tamu.sh  driver.sh  gen_er.sh  gen_g500.sh  gen_ssca.sh  parallel_tamu_refactor.sh
scripts/20251006-scripts/: driver.sh  rmat_hash.sh  rmat_heap.sh  rmat_hsersc.sh  tamu_hash.sh  tamu_heap.sh  tamu_hsersc.sh
scripts/20251007-scripts/: driver.sh  rmat_mkl.sh  tamu_mkl.sh
scripts/20251008-scripts/: build_outer.sh  driver.sh  rmat_outer.sh  tamu_outer.sh
scripts/20251010-scripts/: driver.sh  rmat_ab_daha.sh  rmat_ab_hybacc_daha.sh  tamu_ab_daha.sh  tamu_ab_hybacc_daha.sh
scripts/20251011-scripts/: driver.sh  plot_rmat_cfg.py  rmat_6_ab.sh  rmat_6_ab_lpt.sh  rmat_6_ab_simp.sh
scripts/20251012-scripts/: driver.sh  plot_daha.py  rmat_ab_hybacc.sh  rmat_ab_hybacc_hyp.sh  softlink.sh
scripts/20251013-scripts/: driver.sh  plot_spmmmv.py  rmat_spmm.sh  rmat_spmv.sh
scripts/20251014-scripts/: driver.sh  plot_rmat_tamu_4.py  softlink.sh  utils.py
scripts/20251015-scripts/: driver.sh  plot_lb.py  rmat_gud.sh  rmat_ompdnr.sh  rmat_ompgdr.sh  softlink.sh  utils.py
scripts/20251016-scripts/: driver.sh  llc_ab_hash.sh  llc_ab_hsersc.sh  llc_hash.sh  llc_hsersc.sh  llc_rmat_ab_hybacc_daha.sh  plot_g500_6_bw.py  softlink.sh
scripts/20251017-scripts/: plot_adj_nnz.py  plot_tamu_tps_llc_miss.py  test_tamu.sh
scripts/20251018-scripts/: plot_llc_miss_ratio_accum.py  softlink.sh  utils.py
scripts/20251019-scripts/: plot_contend_2_4.py  test_ab_hash_hyper.sh
scripts/20251020-scripts/: in_debug_test.sh  plot_hash_numc_comp_write.py
scripts/20251021-scripts/: plot_thr_g500_17_16.py  test_g500_17_16.sh
src/: dnr_hashspgemm.c  hashspgemm.c  heapspgemm.c  hserscspgemm.c  mkl_cspblas_dcsrgemv.c  mkl_dcsrmultcsr.c  mkl_sparse_d_mm.c  omphashspgemm.c  rmat_load.c  rmat_ones.c  suitesparse_load.c  suitesparse_ones.c  tamu_load.c  tamu_ones.c  toy.c
src/inc/: CMakeLists.txt  allocator.h  store.h  utils.c  utils.h
src/mm/: CMakeLists.txt  common.c  common.h  mm_utils.c  mm_utils.h
src/papi/: mypapi.c  mypapi.h
